# chromack

./: CMakeLists.txt  Makefile
build-chromack/: CMakeCache.txt  Makefile  chromack  cmake_install.cmake  install_manifest.txt
build-chromack/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-chromack/chromack_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-chromack/chromack_autogen/UVLADIE3JM/: moc_ChromackConfig.cpp  moc_ChromackConfig.cpp.d  moc_ChromackControl.cpp  moc_ChromackControl.cpp.d  moc_ChromackPanel.cpp  moc_ChromackPanel.cpp.d
config/: colors.css  config.toml  material.css  style.css
scripts/: launch-chromack  reload-chromack  restart-chromack  toggle-chromack
src/: ChromackConfig.cpp  ChromackConfig.h  ChromackControl.cpp  ChromackControl.h  ChromackNotificationServer.cpp  ChromackPanel.cpp  ChromackPanel.h  NotificationServer.cpp  main.cpp
